# python-llm-eval

./: .deepeval  .deepeval-cache.json  .deepeval_telemetry.txt  .gitignore  01-eval.ipynb  02-evaluate.ipynb  03-llm.ipynb  04_deepeval.ipynb  05_dag.ipynb  06_synthesizer.ipynb  07_answer_relevancy.ipynb  08_faithfulness.ipynb  09_contextual_precision.ipynb  10_contextual_recall.ipynb  11_contextual_relevancy.ipynb  12_task_completion.ipynb  13_tool_correctness.ipynb  14_bias.ipynb  15_toxicity.ipynb  16_summarization.ipynb  17_prompt_alignment.ipynb  18_hallucination.ipynb  19_ragas.ipynb  Makefile  README.md  example.txt  llm.py  pyproject.toml  requirements.txt  test_example.py
docs/: 01-eval.html  02-evaluate.html  03-llm.html  04_deepeval.html  05_dag.html  06_synthesizer.html  07_answer_relevancy.html  08_faithfulness.html  09_contextual_precision.html  10_contextual_recall.html  11_contextual_relevancy.html  12_task_completion.html  13_tool_correctness.html  14_bias.html  15_toxicity.html  16_summarization.html  17_prompt_alignment.html  18_hallucination.html  19_ragas.html  index.html  search.json
