[tool.poetry]
name = "python-llm-eval"
version = "0.1.0"
description = ""
authors = ["alextanhongpin <alextan220990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
evaluate = "^0.4.1"
jupyterlab = "^4.0.9"
scikit-learn = "^1.3.2"
absl-py = "^2.0.0"
rouge-score = "^0.1.2"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
