[project]
name = "python-llm-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py>=2.2.0",
    "black>=25.1.0",
    "deepeval>=2.6.3",
    "evaluate>=0.4.3",
    "ipywidgets>=8.1.5",
    "isort>=6.0.1",
    "jupyterlab-code-formatter>=3.0.2",
    "jupyterlab-vim>=4.1.4",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "numpy>=2.2.4",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
