[project]
name = "python-llm-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py>=2.2.0",
    "black>=25.1.0",
    "chromadb>=0.6.3",
    "deepeval>=2.6.4",
    "evaluate>=0.4.3",
    "fastembed>=0.6.0",
    "ipywidgets>=8.1.5",
    "isort>=6.0.1",
    "jupyterlab-code-formatter>=3.0.2",
    "jupyterlab-vim>=4.1.4",
    "langchain-ollama>=0.3.0",
    "matplotlib>=3.10.1",
    "mypy>=1.15.0",
    "nltk>=3.9.1",
    "numpy>=2.2.4",
    "ollama>=0.4.7",
    "ragas>=0.2.14",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
